# litefunctions

./: .gitignore  Cargo.toml  Makefile  README.md  a.yaml  artifacthub-repo.yml  bash  config.env  deploy.yaml  errors.yaml  example-workflow.yaml  gitea_deployment.yaml  reset.sh  setup_istio.sh  sqlc.yaml
.github/workflows/: build-and-push-images.yaml  build.yaml  chart-release.yaml  docs.yaml
chart/: Chart.yaml  README.md  artifacthub-repo.yml  litefunctions-0.1.0.tgz  litefunctions-0.1.3.tgz  litefunctions-0.1.5.tgz  litefunctions-0.1.7.tgz  local.sh  updateCRD  values.schema.json  values.yaml
chart/crds/: apps.ashupednekar.github.io_functions.yaml
chart/templates/: NOTES.txt  _helpers.tpl  actions_secret.yaml  box.yaml  cleanup-cron.yaml  database-delete-hook.yaml  database.yaml  db-setup-job.yaml  (+10 more)
cmd/: migrate.go
common/: go.mod
docs/: go.mod  hugo_stats.json  package-lock.json
ingestor/: Dockerfile  Makefile  go.mod  go.sum
migrations/: 00003_project_functions.sql
operator/: Dockerfile  Makefile  PROJECT  go.mod  go.sum
pkg/: config.go
portal/: Makefile  config.env  go.mod  go.sum  main.go
runtimes/rust/: Cargo.toml  config.env
runtimes/rust/cmd/: main.rs
runtimes/rust/pkg/: conf.rs  consumer.rs  function.rs  function_async.rs  mod.rs  state.rs
runtimes/rust/src/: main.rs  prelude.rs
runtimes/rust/src/cmd/: mod.rs
runtimes/rust/src/pkg/: conf.rs  consumer.rs  function.rs  mod.rs  routes.rs  state.rs
src/: conf.rs
templates/: endpoints_templ.go  functions.templ  home.templ  home_templ.go  layout.templ  layout_templ.go  spec.go
(+195 files in other folders)
