[package]
name = "function"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "function"
path = "cmd/main.rs"

[dependencies]
anyhow = "1.0.95"
async-nats = "0.37.0"
axum = "0.7.5"
futures = "0.3.31"
rand = "0.8.5"
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
